welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: not found: value ||
	if(((num%10) < 3))||((num%10)>7 && (num%10)<13){
                          ^